Enable more pydocstyle tests in tox

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,6 @@ deps =
     flake8-docstrings
 
 [testenv:pydocstyle]
-commands = pydocstyle --convention=numpy ordia
+commands = pydocstyle --select=D1,D200,D201,D202,D204,D205,D206,D207,D208,D209,D210,D211,D212,D214,D215,D3,D4 ordia
 deps = 
     pydocstyle
