Fix test for flake8

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps=
     -rrequirements.txt
 
 [testenv:flake8]
-commands = flake8 scholia
+commands = flake8 ordia
 deps = 
     flake8
     flake8-docstrings
