Fix #252 Add Python 3.10 to tox testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, pydocstyle, py39
+envlist = flake8, pydocstyle, py39, py310
 
 
 [testenv:py27]
@@ -25,6 +25,16 @@ commands =
 deps=
     pytest
     -rrequirements.txt
+
+[testenv:py310]
+commands = 
+    python -m pytest --doctest-modules ordia
+    python -m pytest tests
+deps=
+    pytest
+    -rrequirements.txt
+
+
 
 [testenv:flake8]
 commands = flake8 ordia
